--- a/templates/home.html
+++ b/templates/home.html
@@ -5,7 +5,7 @@
     <!-- Metadata -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SmartDisplay</title>
+    <title>ReaderDashboard</title>
 
     <!-- CSS -->
     <link rel="stylesheet" type="text/css" href="/static/css/styles.css">
