add blackout module

--- a/templates/home.html
+++ b/templates/home.html
@@ -150,5 +150,6 @@
     <script src="/static/js/update_time.js"></script>
     <script src="/static/js/update_weather.js"></script>
     <script src="/static/js/update_compliments.js"></script>
+    <script src="/static/js/blackout.js"></script>
 </body>
 </html>
